test/dummy/app/views/errors/_backtrace.html.slim
.error-page-backtrace.inset-box
	pre
		- @backtrace[0..10].each do |line|
			.line= line